test/errors/no_package_statement_first.ecsact
component ExampleComponent {
	f32 num;
}

// Package statement must be first
package errors.no_pkg_statement_first;

